Enhance portfolio website: Added Experience section, improved About description, and updated project details. Implemented smooth scrolling for navigation links and refined CSS for better layout and styling.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <nav class="navbar">
       <a href="#about" class="nav-link">About</a>
       <a href="#portfolio" class="nav-link">Portfolio</a>
+      <a href="#experience" class="nav-link">Experience</a>
       <a href="#contact" class="nav-link">Contact</a>
     </nav>
 
@@ -32,7 +33,7 @@
       <div class="about-container">
         <div class="description">
           <p>
-            I’m a Swift & Flutter developer focused on building clean, scalable, and user-centered apps. I’m genuinely passionate about creating high-quality mobile experiences, and I’d love to connect and work with you.
+            I’m a Swift and Flutter developer focused on building high-quality, scalable, and efficient mobile apps. I’ve worked across multiple fields, including fitness, <br>e-commerce, and taxes. I’d love to contribute to your project and help turn your ideas into reality.
           </p>
         </div>
 
@@ -46,41 +47,76 @@
       </div>
     </section>
 
-    <!-- SECTION 2: PROJECTS & WORK HISTORY -->
+    <!-- SECTION 2: PORTFOLIO -->
     <section id="portfolio">
-      <div class="tabs">
-        <button class="tab-btn active" data-tab="projects">Projects</button>
-        <button class="tab-btn" data-tab="history">Work History</button>
-      </div>
-
-      <div class="tab-content active" id="projects">
-        <div class="project-grid">
-          <div class="card">
-            <h3>Admin Dashboard</h3>
-            <p>Flutter web app for managing products, orders, and users.</p>
+      <h2 class="section-title">Portfolio</h2>
+      <div class="project-grid">
+        <div class="project-card">
+          <div class="video-container">
+            <div class="video-placeholder">
+              <span>Demo Video</span>
+            </div>
           </div>
-          <div class="card">
+          <div class="project-info">
+            <h3>Admin Dashboard</h3>
+            <p>Flutter web app for managing products, orders, and users with a modern and intuitive interface.</p>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="video-container">
+            <div class="video-placeholder">
+              <span>Demo Video</span>
+            </div>
+          </div>
+          <div class="project-info">
             <h3>Fitness Tracker</h3>
-            <p>iOS app built with Swift + HealthKit.</p>
+            <p>iOS app built with Swift + HealthKit for tracking workouts, nutrition, and health metrics.</p>
           </div>
         </div>
       </div>
+    </section>
 
-      <div class="tab-content" id="history">
-        <ul class="timeline">
-          <li>
-            <strong>Mobile Developer – 2022-2025</strong><br />Flutter & iOS
-            projects
-          </li>
-          <li>
-            <strong>Freelancer – 2020-2022</strong><br />Client apps and
-            prototypes
-          </li>
-        </ul>
+    <!-- SECTION 3: WORK EXPERIENCE -->
+    <section id="experience">
+      <h2 class="section-title">Work Experience</h2>
+      <div class="timeline-container">
+        <div class="timeline-item">
+          <div class="timeline-left">
+            <div class="timeline-date">Feb 2021 - Apr 2022</div>
+            <div class="timeline-company">Daniel Apps</div>
+          </div>
+          <div class="timeline-right">
+            <div class="timeline-content">
+              <p>Developed mobile applications using Flutter and Swift, focusing on creating user-friendly interfaces and implementing core features. Collaborated with cross-functional teams to deliver high-quality products.</p>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-left">
+            <div class="timeline-date">Apr 2022 - Apr 2024</div>
+            <div class="timeline-company">AREAMOVIL</div>
+          </div>
+          <div class="timeline-right">
+            <div class="timeline-content">
+              <p>Led mobile development projects, working with Flutter and iOS technologies. Architected scalable solutions and mentored junior developers. Delivered multiple successful apps to production.</p>
+            </div>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-left">
+            <div class="timeline-date">Apr 2024 - Now</div>
+            <div class="timeline-company">Daniel Apps</div>
+          </div>
+          <div class="timeline-right">
+            <div class="timeline-content">
+              <p>Continuing to build innovative mobile solutions with a focus on modern architecture patterns and best practices. Working on cutting-edge projects that push the boundaries of mobile development.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
-    <!-- SECTION 3: CONTACT -->
+    <!-- SECTION 4: CONTACT -->
     <section id="contact">
       <h2>Contact Me</h2>
       <p>Email: <a href="mailto:camilodev@gmail.com">camilodev@gmail.com</a></p>
