Update project details and video presentation in portfolio: Changed project titles and descriptions for 'Smart Catalog' and 'Smart Catalog Admin'. Replaced demo video placeholders with embedded video players and enhanced CSS for improved layout and styling of video containers.

--- a/index.html
+++ b/index.html
@@ -54,23 +54,31 @@
         <div class="project-card">
           <div class="video-container">
             <div class="video-placeholder">
-              <span>Demo Video</span>
+              <div class="android-frame">
+                <video controls>
+                  <source src="assets/videos/smart-catalog.mp4" type="video/mp4">
+                  your browser does not support the video tag.
+                </video>
+              </div>
             </div>
           </div>
           <div class="project-info">
-            <h3>Admin Dashboard</h3>
-            <p>Flutter web app for managing products, orders, and users with a modern and intuitive interface.</p>
+            <h3>Smart Catalog</h3>
+            <p>A Flutter mobile application for browsing digital product catalogs, adding items to a shopping cart, and placing orders. Users can view catalog pages, select products, manage their cart, track order history, and update their profile. Admins can manage catalogs and products through Firebase.</p>
           </div>
         </div>
         <div class="project-card">
           <div class="video-container">
-            <div class="video-placeholder">
-              <span>Demo Video</span>
+            <div class="web-frame">
+              <video controls>
+                <source src="assets/videos/smart-catalog-admin.mp4" type="video/mp4">
+                your browser does not support the video tag.
+              </video>
             </div>
           </div>
           <div class="project-info">
-            <h3>Fitness Tracker</h3>
-            <p>iOS app built with Swift + HealthKit for tracking workouts, nutrition, and health metrics.</p>
+            <h3>Smart Catalog Admin</h3>
+            <p>A comprehensive admin dashboard application for managing product catalogs, orders, and users. This application provides an intuitive interface for uploading PDF catalogs, managing product data, processing orders, and administering user accounts.</p>
           </div>
         </div>
       </div>
