--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
           <div class="project-info">
             <h3>Smart Catalog</h3>
             <p>A Flutter mobile application for browsing digital product catalogs, adding items to a shopping cart, and placing orders. Users can view catalog pages, select products, manage their cart, track order history, and update their profile. Admins can manage catalogs and products through Firebase.</p>
+            <div class="project-skills">
+              <span class="skill-badge">Flutter</span>
+              <span class="skill-badge">Firebase</span>
+              <span class="skill-badge">Dart</span>
+              <span class="skill-badge">Clean architecture</span>
+              <span class="skill-badge">Bloc</span>
+
+            </div>
+            <div class="project-links">
+              <a href="https://github.com/CamiloPacheco98/SmartCatalog" class="github-link" target="_blank" rel="noopener noreferrer">
+                <svg class="github-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                  <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                </svg>
+                <span>View on GitHub</span>
+              </a>
+            </div>
           </div>
         </div>
         <div class="project-card">
@@ -79,6 +95,21 @@
           <div class="project-info">
             <h3>Smart Catalog Admin</h3>
             <p>A comprehensive admin dashboard application for managing product catalogs, orders, and users. This application provides an intuitive interface for uploading PDF catalogs, managing product data, processing orders, and administering user accounts.</p>
+            <div class="project-skills">
+              <span class="skill-badge">Angular</span>
+              <span class="skill-badge">CSS</span>
+              <span class="skill-badge">HTML</span>
+              <span class="skill-badge">Firebase Cloud Firestore</span>
+              <span class="skill-badge">Firebase</span>
+            </div>
+            <div class="project-links">
+              <a href="https://github.com/CamiloPacheco98/SmartCatalogAdmin" class="github-link" target="_blank" rel="noopener noreferrer">
+                <svg class="github-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                  <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                </svg>
+                <span>View on GitHub</span>
+              </a>
+            </div>
           </div>
         </div>
       </div>
