Update experience descriptions in portfolio: Revised project details to reflect contributions to a fitness app and an e-commerce project, highlighting feature implementation, bug fixes, and leadership in development processes.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </div>
           <div class="timeline-right">
             <div class="timeline-content">
-              <p>Developed mobile applications using Flutter and Swift, focusing on creating user-friendly interfaces and implementing core features. Collaborated with cross-functional teams to deliver high-quality products.</p>
+              <p>Contributed to a fitness app built in Swift, featuring workout routines and user achievement tracking. I led the implementation of new features and ensured app stability by identifying and fixing critical bugs.</p>
             </div>
           </div>
         </div>
@@ -137,7 +137,7 @@
           </div>
           <div class="timeline-right">
             <div class="timeline-content">
-              <p>Led mobile development projects, working with Flutter and iOS technologies. Architected scalable solutions and mentored junior developers. Delivered multiple successful apps to production.</p>
+              <p>Worked on a project for a major e-commerce company in Latin America called Homecenter. I was responsible for developing new features such as express delivery with real-time tracking. I was later promoted to oversee release delivery and review pull requests.on.</p>
             </div>
           </div>
         </div>
@@ -148,7 +148,7 @@
           </div>
           <div class="timeline-right">
             <div class="timeline-content">
-              <p>Continuing to build innovative mobile solutions with a focus on modern architecture patterns and best practices. Working on cutting-edge projects that push the boundaries of mobile development.</p>
+              <p>Worked on multiple projects using both Swift and Flutter across different sectors, including taxes and real estate. I started several projects from scratch and was responsible for proposing and offering the best technologies and architecture for each one. I handled app deployments, developed new features, and supported junior developers throughout the development process.</p>
             </div>
           </div>
         </div>
